fix firefox specific grid-gap issue with flexbox

--- a/src/styles/components/_contact-form.scss
+++ b/src/styles/components/_contact-form.scss
@@ -6,23 +6,23 @@
   height: 100%;
   margin: 5rem 7.5vw;
   display: grid;
-  grid: 1fr 2.5fr 1fr / repeat(3, 1fr);
+  grid: 1fr 1.5fr 1fr / repeat(3, 1fr);
   grid-gap: 3.125rem;
   grid-template-areas:
           "head name mail"
           "head mesg null"
           "head send null";
 
-  @media screen and (max-width: 900px) {
-    grid: 1fr 1fr 5fr / 1fr 1fr;
+  @media screen and (max-width: 950px) {
+    grid: 1fr 1fr 1.5fr / 1fr 1fr;
     grid-template-areas:
             "head head"
             "name mail"
             "mesg send";
   }
 
-  @media screen and (max-width: 650px) {
-    grid-gap: 2rem;
+  @media screen and (max-width: 700px) {
+    grid-gap: 0;
     display: flex;
     flex-direction: column;
     width: 80vw;
@@ -34,14 +34,19 @@
     @include heading;
     margin-top: 0;
 
-    @media screen and (max-width: 650px) {
+    @media screen and (max-width: 700px) {
       font-size: 7.5vw;
       width: 75vw;
-      margin: 0 auto;
+      margin: 0 auto 1rem auto;
     }
   }
 
   > div {
+
+    @media screen and (max-width: 700px) {
+      margin: 1rem 0;
+    }
+
     label {
       @include label;
       display: block;
@@ -53,8 +58,8 @@
       margin: 1rem 0 0 0;
       width: 17.5rem;
 
-      @media screen and (max-width: 650px) {
-        margin: 0;
+      @media screen and (max-width: 700px) {
+        width: 80vw;
       }
     }
 
@@ -88,12 +93,14 @@
     height: 3.125rem;
     border: none;
 
-    @media screen and (max-width: 900px) {
+    @media screen and (max-width: 950px) {
       align-self: end;
+      margin-bottom: 0.725rem;
     }
 
-    @media screen and (max-width: 650px) {
+    @media screen and (max-width: 700px) {
       align-self: flex-start;
+      margin-top: 1rem;
     }
   }
 }
